Finished tests and finishing updates & details